--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "next start",
     "lint": "next lint"
   },
-   
   "dependencies": {
+    "lucide-react": "^0.553.0",
     "next": "^15.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
