--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@iconify/react": "^6.0.2",
     "@next/bundle-analyzer": "^16.1.4",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
